...
            android:padding="10dp"
            android:text="@string/upload"
            android:textColor="@color/Black"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/year_of_graduation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/year_of_graduation"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@color/Black"
            android:textColorHint="#B2FFFFFF"/>

        <EditText
            android:id="@+id/area_of_study"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/area_of_study"
            android:singleLine="true"
            android:textColor="@color/Black"
...
